--- a/foodie_app/templates/user_profile.html
+++ b/foodie_app/templates/user_profile.html
@@ -31,54 +31,57 @@
         <div class="w-50">
             <div class="d-flex flex-column">
                 <h2 class="heading">This Week</h2>
-                {%if menu.editor.id == user.id %}
-                <a class="btn view-recipe ml-auto mr-auto" href="/home/edit_menu{{menu.id}}">Edit Menu</a>
-                {% else %}
-                <a class="btn view-recipe ml-auto mr-auto" href="/home/menu">Create Menu</a>
-                {% endif %}
             </div>
-            <div class="menu w-100 m-3 d-flex flex-column p-1 rounded">
+            <div class="menu w-100 m-3 d-flex flex-column p-1 rounded shadow-sm">
                 <div class="day-row d-flex justify-content-around p-1">
                     <div class="day rounded shadow-sm d-flex flex-column">
-                        <p class="font-weight-bold pt-2">Sunday</p>
-                        <p class="w-75 ml-auto mr-auto">{{menu.sunday.name}}</p>
-                        <a href="/home/recipe_{{menu.sunday.id}}" class="btn view-recipe w-50 ml-auto mr-auto">Recipe</a>
+                        <p class="font-weight-bold pt-2 h5 mt-2">Sunday</p>
+                        <p class="w-75 ml-auto mr-auto mt-auto mb-auto">{{menu.sunday.name}}</p>
+                        <a href="/home/recipe_{{menu.sunday.id}}" class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
                     </div>
                     <div class="day rounded shadow-sm d-flex flex-column">
-                        <p class="font-weight-bold pt-2">Monday</p>
-                        <p class="w-75 ml-auto mr-auto">{{menu.monday.name}}</p>
-                        <a href="/home/recipe_{{menu.monday.id}}" class="btn view-recipe w-50 ml-auto mr-auto">Recipe</a>
+                        <p class="font-weight-bold pt-2 h5 mt-2">Monday</p>
+                        <p class="w-75 ml-auto mr-auto mt-auto mb-auto">{{menu.monday.name}}</p>
+                        <a href="/home/recipe_{{menu.monday.id}}" class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
                     </div>
                     <div class="day rounded shadow-sm d-flex flex-column">
-                        <p class="font-weight-bold pt-2">Tuesday</p>
-                        <p class="w-75 ml-auto mr-auto">{{menu.monday.name}}</p>
-                        <a href="/home/recipe_{{menu.monday.id}}" class="btn view-recipe w-50 ml-auto mr-auto">Recipe</a>
+                        <p class="font-weight-bold pt-2 h5 mt-2">Tuesday</p>
+                        <p class="w-75 ml-auto mr-auto mt-auto mb-auto">{{menu.monday.name}}</p>
+                        <a href="/home/recipe_{{menu.monday.id}}" class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
                     </div>
                 </div>
 
                 <div class="day-row d-flex justify-content-around p-1">
                     <div class="day rounded shadow-sm d-flex flex-column">
-                        <p class="font-weight-bold pt-2">Wednesday</p>
-                        <p class="w-75 ml-auto mr-auto">{{menu.wednesday.name}}</p>
-                        <a href="/home/recipe_{{menu.wednesday.id}}" class="btn view-recipe w-50 ml-auto mr-auto">Recipe</a>
+                        <p class="font-weight-bold pt-2 h5 mt-2">Wednesday</p>
+                        <p class="w-75 ml-auto mr-auto mt-auto mb-auto">{{menu.wednesday.name}}</p>
+                        <a href="/home/recipe_{{menu.wednesday.id}}" class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
                     </div>
                     <div class="day rounded shadow-sm d-flex flex-column">
-                        <p class="font-weight-bold pt-2">Thursday</p>
-                        <p class="w-75 ml-auto mr-auto">{{menu.thursday.name}}</p>
-                        <a href="/home/recipe_{{menu.thursday.id}}" class="btn view-recipe w-50 ml-auto mr-auto">Recipe</a>
+                        <p class="font-weight-bold pt-2 h5 mt-2">Thursday</p>
+                        <p class="w-75 ml-auto mr-auto mt-auto mb-auto">{{menu.thursday.name}}</p>
+                        <a href="/home/recipe_{{menu.thursday.id}}" class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
                     </div>
                     <div class="day rounded shadow-sm d-flex flex-column">
-                        <p class="font-weight-bold pt-2">Friday</p>
-                        <p class="w-75 ml-auto mr-auto">{{menu.friday.name}}</p>
-                        <a href="/home/recipe_{{menu.friday.id}}" class="btn view-recipe w-50 ml-auto mr-auto">Recipe</a>
+                        <p class="font-weight-bold pt-2 h5 mt-2">Friday</p>
+                        <p class="w-75 ml-auto mr-auto mt-auto mb-auto">{{menu.friday.name}}</p>
+                        <a href="/home/recipe_{{menu.friday.id}}" class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
                     </div>
                 </div>
-                <div class="day-row d-flex justify-content-around p-1">
+                <div class="day-row d-flex justify-content-end p-1">
                     <div class="day rounded shadow-sm d-flex flex-column">
-                        <p class="font-weight-bold pt-2">Saturday</p>
-                        <p class="w-75 ml-auto mr-auto">{{menu.saturday.name}}</p>
-                        <a href="/home/recipe_{{menu.saturday.id}}" class="btn view-recipe w-50 ml-auto mr-auto">Recipe</a>
+                        <p class="font-weight-bold pt-2 h5 mt-2">Saturday</p>
+                        <p class="w-75 ml-auto mr-auto mt-auto mb-auto">{{menu.saturday.name}}</p>
+                        <a href="/home/recipe_{{menu.saturday.id}}" class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
                     </div>
+                    {%if menu.editor.id == user.id %}
+                    <div class="edit d-flex flex-column">
+                        <a class="btn btn-lg mt-auto ml-auto mr-1" href="/home/edit_menu{{menu.id}}"><i class="far fa-edit"></i></a>
+                    </div>
+                    {% else %}
+                    <a class="btn view-recipe" href="/home/menu">create Menu</a>
+                    {% endif %}
+                    
                 </div>
             </div>
         </div>
@@ -86,7 +89,7 @@
             <h2 class="heading ">Favorite Recipes</h2>
             {% for recipe in user.favorite_recipes.all %}
             <div class="recipe-card rounded shadow-sm w-75 p-3 m-2">
-                <p class="text-center"><a id="recipe-text" href="/home/recipe_{{recipe.id}}">{{recipe.name}}</a></p>
+                <p class="text-center h5"><a id="recipe-text" href="/home/recipe_{{recipe.id}}">{{recipe.name}}</a></p>
                 <p>{{recipe.desc}}</p>
                 {% for favorite_user in recipe.users_who_favorite.all %}
                 <form action="/home/{{user.id}}/remove_favorite_profile" method="POST">
@@ -101,7 +104,7 @@
         </div>
         <div class="w-25">
             <h2 class="heading">Shopping List</h2>
-            <div class="shopping-box mr-3">
+            <div class="shopping-box mr-3 rounded shadow-sm">
                 <div class="m-1 p-2 rounded" id="shopping-list">
                     <input type="hidden" value="/home/{{user.id}}/add_item" id="userId">
                     {% if messages %}
@@ -126,7 +129,7 @@
                         {% endfor %}
                     </ul>
                 </div>
-                <button class="rounded btn-secondary m-3" id="addItem">Add Item</button>
+                <button class="btn rounded btn-sm m-3 add-item" id="addItem">Add Item</button>
             </div>
         </div>
     </div>
