--- a/foodie_app/templates/recipe.html
+++ b/foodie_app/templates/recipe.html
@@ -39,33 +39,14 @@
             <a href="{{recipe.source}}">{{recipe.source}}</a>
             <div class="d-flex mt-2">
                 {% if recipe.creator.id == user.id %}
-                <form action="/home/delete_recipe" method="POST">
-                    {% csrf_token %}
-                    <input type="hidden" name="recipe_id" value="{{ recipe.id }}">
-                    <input class="btn btn-danger p-1 mr-2" type="submit" name="delete" value="Delete">
-                </form>
-                <form action="/home/edit_{{recipe.id}}" method="POST">
-                    {% csrf_token %}
-                    <input type="hidden" name="recipe_id" value="{{ recipe.id }}">
-                    <input class="btn btn-secondary p-1 pl-2 pr-2" type="submit" name="edit" value="Edit">
-                </form>
+                <a href="/home/{{recipe.id}}/delete_recipe" class="btn btn-danger p-1 mr-2"><i class="far fa-trash-alt"></i> Delete</a>
+                <a href="/home/{{recipe.id}}/edit_recipe" class="btn btn-secondary p-1 mr-2"><i class="far fa-edit"></i> Edit</a>
                 {% endif %}
                 {% if user in recipe.users_who_favorite.all %}
-                <form action="/home/{{recipe.id}}/remove_favorite" method="POST">
-                    {% csrf_token %}
-                    <input type="hidden" name="recipe_id" value="{{ recipe.id }}">
-                    <input type="hidden" name="user_id" value="{{ user.id }}">
-                    <input class="btn favorite ml-2 pt-1 pb-1" type="submit" name="add_fav"
-                        value="Remove from Favorites">
-                </form>
+                <a href="/home/{{recipe.id}}/remove_favorite" class="btn favorite p-1 mr-2"></i> Remove Favorites</a>
                 {% endif %}
                 {% if not user in recipe.users_who_favorite.all %}
-                <form class="mt-0 mb-1" action="/home/{{recipe.id}}/add_favorite" method="POST">
-                    {% csrf_token %}
-                    <input type="hidden" name="recipe_id" value="{{ recipe.id }}">
-                    <input type="hidden" name="user_id" value="{{ user.id }}">
-                    <input class="btn favorite ml-2 pt-1 pb-1" type="submit" name="add_fav" value="Add to Favorites">
-                </form>
+                <a href="/home/{{recipe.id}}/add_favorite" class="btn favorite p-1 mr-2"><i class="far fa-heart"></i> Add Favorite</a>
                 {% endif %}
             </div>
 
