update new recipe page style

--- a/foodie_app/static/css/style.css
+++ b/foodie_app/static/css/style.css
@@ -81,11 +81,11 @@ h2, .home {
     font-family: "FontAwesome",Arial, Helvetica, sans-serif;
 }
 
-.view-recipe, .favorite, .add-item, .submitItem {
+.view-recipe, .favorite, .add-item, .submitItem, .new-recipe {
     background-color: #d2fdff;
     color: black;
 }
-.view-recipe:hover, .favorite:hover, .add-item:hover, .submitItem:hover {
+.view-recipe:hover, .favorite:hover, .add-item:hover, .submitItem:hover, .new-recipe:hover {
     background-color: #303c6c; /* Green */
     color: white;
   }
