--- a/foodie_app/templates/edit_menu.html
+++ b/foodie_app/templates/edit_menu.html
@@ -32,8 +32,8 @@
         <form action="/home/{{user.id}}/edit_menu" method="POST">
             {% csrf_token %}
             <div class="form-group">
-                <label class="col-sm-2 col-form-label" for="sunday">Sunday: </label>
-                <select name="sunday" id="sunday">
+                <label for="sunday" class="h5">Sunday: </label>
+                <select name="sunday" id="sunday" class="form-control w-50">
                     <option value="{{menu.sunday.id}}">{{menu.sunday.name}}</option>
                     {% for recipe in recipes %}
                     <option value="{{recipe.id}}">{{recipe.name}}</option>
@@ -41,8 +41,8 @@
                 </select>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 col-form-label" for="monday">Monday: </label>
-                <select name="monday" id="monday">
+                <label for="monday" class="h5">Monday: </label>
+                <select name="monday" id="monday" class="form-control w-50">
                     <option value="{{menu.monday.id}}">{{menu.monday.name}}</option>
                     {% for recipe in recipes %}
                     <option value="{{recipe.id}}">{{recipe.name}}</option>
@@ -50,8 +50,8 @@
                 </select>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 col-form-label" for="tuesday">Tuesday: </label>
-                <select name="tuesday" id="tuesday">
+                <label for="tuesday" class="h5">Tuesday: </label>
+                <select name="tuesday" id="tuesday" class="form-control w-50">
                     <option value="{{menu.tuesday.id}}">{{menu.tuesday.name}}</option>
                     {% for recipe in recipes %}
                     <option value="{{recipe.id}}">{{recipe.name}}</option>
@@ -59,8 +59,8 @@
                 </select>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 col-form-label" for="wednesday">Wednesday: </label>
-                <select name="wednesday" id="wednesday">
+                <label for="wednesday" class="h5">Wednesday: </label>
+                <select name="wednesday" id="wednesday" class="form-control w-50">
                     <option value="{{menu.wednesday.id}}">{{menu.wednesday.name}}</option>
                     {% for recipe in recipes %}
                     <option value="{{recipe.id}}">{{recipe.name}}</option>
@@ -68,8 +68,8 @@
                 </select>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 col-form-label" for="thursday">Thursday: </label>
-                <select name="thursday" id="thursday">
+                <label for="thursday" class="h5">Thursday: </label>
+                <select name="thursday" id="thursday" class="form-control w-50">
                     <option value="{{menu.thursday.id}}">{{menu.thursday.name}}</option>
                     {% for recipe in recipes %}
                     <option value="{{recipe.id}}">{{recipe.name}}</option>
@@ -77,8 +77,8 @@
                 </select>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 col-form-label" for="friday">Friday: </label>
-                <select name="friday" id="friday">
+                <label for="friday" class="h5">Friday: </label>
+                <select name="friday" id="friday" class="form-control w-50">
                     <option value="{{menu.friday.id}}">{{menu.friday.name}}</option>
                     {% for recipe in recipes %}
                     <option value="{{recipe.id}}">{{recipe.name}}</option>
@@ -86,8 +86,8 @@
                 </select>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 col-form-label" for="saturday">Saturday: </label>
-                <select name="saturday" id="saturday">
+                <label for="saturday" class="h5">Saturday: </label>
+                <select name="saturday" id="saturday" class="form-control w-50">
                     <option value="{{menu.saturday.id}}">{{menu.saturday.name}}</option>
                     {% for recipe in recipes %}
                     <option value="{{recipe.id}}">{{recipe.name}}</option>
@@ -95,7 +95,8 @@
                 </select>
             </div>
             <input type="hidden" name="menu_id" value="{{ menu.id }}">
-            <input type="submit" name="submit" id="submit" value="Save Menu" class="save-menu btn">
+            <input type="submit" name="submit" id="submit" value="Save Menu" class="save-menu btn shadow-sm">
+            <a href="/home/{{user.id}}" class="btn btn-warning shadow-sm">Cancel</a>
         </form>
 
     </div>
