--- a/foodie_app/templates/menu.html
+++ b/foodie_app/templates/menu.html
@@ -28,66 +28,68 @@
     <button id="topBtn" title="Go to top" class="btn rounded shadow">Top</button>
     <div class="pt-5"></div>
     <div class="w-50 shadow-sm mt-5 p-4 ml-auto mr-auto rounded recipe-card">
+        <h2 class="text-center">New Menu:</h2>
         <form action="/home/create_menu" method="POST">
             {% csrf_token %}
-            <div>
-                <label for="sunday">Sunday: </label>
-                <select name="sunday" id="sunday">
+            <div class="form-group">
+                <label for="sunday" class="h5">Sunday: </label>
+                <select name="sunday" id="sunday" class="form-control w-50">
                     {% for recipe in recipes %}
                     <option value="{{recipe.id}}">{{recipe.name}}</option>
                     {% endfor %}
                 </select>
             </div>
-            <div>
-                <label for="monday">Monday: </label>
-                <select name="monday" id="monday">
+            <div class="form-group">
+                <label for="monday" class="h5">Monday: </label>
+                <select name="monday" id="monday" class="form-control w-50">
                     {% for recipe in recipes %}
                     <option value="{{recipe.id}}">{{recipe.name}}</option>
                     {% endfor %}
                 </select>
             </div>
-            <div>
-                <label for="tuesday">Tuesday: </label>
-                <select name="tuesday" id="tuesday">
+            <div class="form-group">
+                <label for="tuesday" class="h5">Tuesday: </label>
+                <select name="tuesday" id="tuesday" class="form-control w-50">
                     {% for recipe in recipes %}
                     <option value="{{recipe.id}}">{{recipe.name}}</option>
                     {% endfor %}
                 </select>
             </div>
-            <div>
-                <label for="wednesday">Wednesday: </label>
-                <select name="wednesday" id="wednesday">
+            <div class="form-group">
+                <label for="wednesday" class="h5">Wednesday: </label>
+                <select name="wednesday" id="wednesday" class="form-control w-50">
                     {% for recipe in recipes %}
                     <option value="{{recipe.id}}">{{recipe.name}}</option>
                     {% endfor %}
                 </select>
             </div>
-            <div>
-                <label for="thursday">Thursday: </label>
-                <select name="thursday" id="thursday">
+            <div class="form-group">
+                <label for="thursday" class="h5">Thursday: </label>
+                <select name="thursday" id="thursday" class="form-control w-50">
                     {% for recipe in recipes %}
                     <option value="{{recipe.id}}">{{recipe.name}}</option>
                     {% endfor %}
                 </select>
             </div>
-            <div>
-                <label for="friday">Friday: </label>
-                <select name="friday" id="friday">
+            <div class="form-group">
+                <label for="friday" class="h5">Friday: </label>
+                <select name="friday" id="friday" class="form-control w-50">
                     {% for recipe in recipes %}
                     <option value="{{recipe.id}}">{{recipe.name}}</option>
                     {% endfor %}
                 </select>
             </div>
-            <div>
-                <label for="saturday">Saturday: </label>
-                <select name="saturday" id="saturday">
+            <div class="form-group">
+                <label for="saturday" class="h5">Saturday: </label>
+                <select name="saturday" id="saturday" class="form-control w-50">
                     {% for recipe in recipes %}
                     <option value="{{recipe.id}}">{{recipe.name}}</option>
                     {% endfor %}
                 </select>
             </div>
             <input type="hidden" name="user_id" id="user_id" value="{{user.id}}">
-            <input type="submit" name="submit" id="submit" value="Create Menu">
+            <input type="submit" name="submit" id="submit" value="Create Menu" class="btn shadow-sm save-menu">
+            <a href="/home/{{user.id}}" class="btn btn-warning shadow-sm">Cancel</a>
         </form>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
