--- a/foodie_app/templates/profile_settings.html
+++ b/foodie_app/templates/profile_settings.html
@@ -38,6 +38,7 @@
                 <textarea name="profile_desc" id="profile_desc" cols="30" rows="10" class="w-50 m-2 p-2 shadow-sm rounded border-0">{{user.profile_desc}}</textarea>
                 <br>
                 <input class="submit m-2 p-2 shadow-sm rounded border-0" type="submit" value="Update">
+                <a href="/home/{{user.id}}" class="btn btn-warning shadow-sm">Cancel</a>
             </form>
         </div>
     </div>
