--- a/foodie_app/templates/inbox.html
+++ b/foodie_app/templates/inbox.html
@@ -23,8 +23,52 @@
         <a href="/home/log_off" class="ml-2 btn-outline-secondary btn-lg p-1 pl-2 pr-2 rounded shadow-sm" data-toggle="tooltip"
             data-placement="bottom" title="Log Out"><i class="fas fa-sign-out-alt"></i></a>
     </header>
-    <button id="topBtn" title="Go to top" class="btn rounded shadow">Top</button>
-
+    <div class="mt-5 pt-5 w-75 ml-auto mr-auto">
+        <button id="topBtn" title="Go to top" class="btn rounded shadow-sm">Top</button>
+        <a href="/home/{{user.id}}/new_message" class="btn rounded shadow-sm button"><i class="far fa-edit"></i> Compose</a>
+        <div class="d-flex">
+            <div class="w-50 ml-auto mr-auto pl-3 pr-3">
+                <h3 class="text-center">Inbox</h3>
+                <table class="table ml-auto mr-auto mt-3 table-bordered table-hover">
+                    <tr>
+                        <th>From</th>
+                        <th>Subject</th>
+                        <th>Date</th>
+                    </tr>
+                    {% for message in messages %}
+                    {% if message.recipient.id == user.id %}
+                    <tr>
+                        <td>{{ message.sender.first_name }} {{ message.sender.last_name }}</td>
+                        <td>{{ message.subject</td>
+                        <td>{{ message.created_at }} <a href="/home/{{user.id}}/{message.id}}/delete"><i class="btn fas fa-trash"></i></a></td>
+                    </tr>
+                    {% endif %}
+                    {% endfor %}
+                </table>
+            </div>
+            <div class="w-50 ml-auto mr-auto pl-3 pr-3">
+                <h3 class="text-center">Sent</h3>
+                <table class="table ml-auto mr-auto mt-3 table-bordered table-hover">
+                    <tr>
+                        <th>To</th>
+                        <th>Subject</th>
+                        <th>Date</th>
+                    </tr>
+                    {% for message in messages %}
+                    {% if message.sender.id == user.id %}
+                    <tr>
+                        <td>{{ message.recipient.first_name }} {{ message.recipient.last_name }}</td>
+                        <td>{{ message.subject</td>
+                        <td>{{ message.created_at }} <a href="/home/{{user.id}}/{message.id}}/delete"><i class="btn fas fa-trash"></i></a></td>
+                    </tr>
+                    {% endif %}
+                    {% endfor %}
+                </table>
+            </div>
+        </div>
+          
+    </div>
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"
         integrity="sha384-LtrjvnR4Twt/qOuYxE721u19sVFLVSA4hf/rRt6PrZTmiPltdZcI7q7PXQBYTKyf"
