--- a/foodie_app/templates/new_message.html
+++ b/foodie_app/templates/new_message.html
@@ -25,26 +25,27 @@
         <a href="/home/log_off" class="ml-2 btn-outline-secondary btn-lg p-1 pl-2 pr-2 rounded shadow-sm" data-toggle="tooltip"
             data-placement="bottom" title="Log Out"><i class="fas fa-sign-out-alt"></i></a>
     </header>
-    <div class="pt-5 mt-5 w-50 ml-auto mr-auto">
-        <h3>New Message</h3>
+    <div class="pt-5"></div>
+    <div class="w-50 ml-auto mr-auto card rounded shadow-sm p-3 mt-5 mb-5">
+        <h3 class="text-center">New Message</h3>
         <form action="/home/{{user.id}}/send_message">
-            <div>
-                <label for="recipient">To</label>
-                <select name="recipient" id="recipient">
+            <div class="form-group">
+                <label for="recipient" class="h5">To</label>
+                <select name="recipient" id="recipient" class="form-control w-50">
                     {% for user in all_users %}
                         <option value="{{user.id}}">{{ user.first_name }} {{user.last_name }}</option>
                     {% endfor %}
                 </select>
             </div>
-            <div>
-                <label for="subject">Subject</label>
-                <input type="text" name="subject" id="subject">
+            <div class="form-group">
+                <label for="subject" class="h5">Subject</label>
+                <input type="text" name="subject" id="subject" class="form-control w-50">
             </div>
-            <div>
-                <label for="message">Message</label>
-                <textarea name="message" id="message" cols="30" rows="10"></textarea>
+            <div class="form-group">
+                <label for="message" class="h5">Message</label>
+                <textarea name="message" id="message" cols="30" rows="10" class="form-control w-50"></textarea>
             </div>
-            <input type="submit" name="submit" id="submit" value="Send">
+            <input type="submit" name="submit" id="submit" value="Send" class="btn shadow-sm submit">
         </form>
     </div>
     
