add new message feature

--- a/foodie_app/templates/inbox.html
+++ b/foodie_app/templates/inbox.html
@@ -39,8 +39,8 @@
                     {% if message.recipient.id == user.id %}
                     <tr>
                         <td>{{ message.sender.first_name }} {{ message.sender.last_name }}</td>
-                        <td>{{ message.subject</td>
-                        <td>{{ message.created_at }} <a href="/home/{{user.id}}/{message.id}}/delete"><i class="btn fas fa-trash"></i></a></td>
+                        <td>{{ message.subject }}</td>
+                        <td>{{ message.created_at }} <a href="/home/{{user.id}}/{{message.id}}/delete_message"><i class="btn fas fa-trash"></i></a></td>
                     </tr>
                     {% endif %}
                     {% endfor %}
@@ -58,7 +58,7 @@
                     {% if message.sender.id == user.id %}
                     <tr>
                         <td>{{ message.recipient.first_name }} {{ message.recipient.last_name }}</td>
-                        <td>{{ message.subject</td>
+                        <td>{{ message.subject }}</td>
                         <td>{{ message.created_at }} <a href="/home/{{user.id}}/{message.id}}/delete"><i class="btn fas fa-trash"></i></a></td>
                     </tr>
                     {% endif %}
