add page to site

--- a/foodie_app/templates/user_profile.html
+++ b/foodie_app/templates/user_profile.html
@@ -84,6 +84,7 @@
                     
                 </div>
             </div>
+            <a href="/home/{{user.id}}/previous_menus" class="btn btn-lg submit rounded shadow-sm ml-3">Previous Menus</a>
         </div>
         <div class="w-25 d-flex flex-column align-items-center">
             <h2 class="heading ">Favorite Recipes</h2>
