--- a/foodie_app/templates/previous_menus.html
+++ b/foodie_app/templates/previous_menus.html
@@ -25,7 +25,59 @@
         <a href="/home/log_off" class="ml-2 btn-outline-secondary btn-lg p-1 pl-2 pr-2 rounded shadow-sm" data-toggle="tooltip"
             data-placement="bottom" title="Log Out"><i class="fas fa-sign-out-alt"></i></a>
     </header>
+    <button id="topBtn" title="Go to top" class="btn rounded shadow">Top</button>
+    <div class="pt-5"></div>
+    <div>
+        {% for menu in menus %}
+            {% if menu.editor.id == user.id %}
+                <div class="menu w-100 m-3 d-flex flex-column p-1 rounded shadow-sm">
+                    <div class="day-row d-flex justify-content-around p-1">
+                        <div class="day rounded shadow-sm d-flex flex-column">
+                            <p class="font-weight-bold pt-2 h5 mt-2">Sunday</p>
+                            <p class="w-75 ml-auto mr-auto mt-auto mb-auto">{{menu.sunday.name}}</p>
+                            <a href="/home/recipe_{{menu.sunday.id}}" class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
+                        </div>
+                        <div class="day rounded shadow-sm d-flex flex-column">
+                            <p class="font-weight-bold pt-2 h5 mt-2">Monday</p>
+                            <p class="w-75 ml-auto mr-auto mt-auto mb-auto">{{menu.monday.name}}</p>
+                            <a href="/home/recipe_{{menu.monday.id}}" class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
+                        </div>
+                        <div class="day rounded shadow-sm d-flex flex-column">
+                            <p class="font-weight-bold pt-2 h5 mt-2">Tuesday</p>
+                            <p class="w-75 ml-auto mr-auto mt-auto mb-auto">{{menu.monday.name}}</p>
+                            <a href="/home/recipe_{{menu.monday.id}}" class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
+                        </div>
+                    </div>
 
+                    <div class="day-row d-flex justify-content-around p-1">
+                        <div class="day rounded shadow-sm d-flex flex-column">
+                            <p class="font-weight-bold pt-2 h5 mt-2">Wednesday</p>
+                            <p class="w-75 ml-auto mr-auto mt-auto mb-auto">{{menu.wednesday.name}}</p>
+                            <a href="/home/recipe_{{menu.wednesday.id}}" class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
+                        </div>
+                        <div class="day rounded shadow-sm d-flex flex-column">
+                            <p class="font-weight-bold pt-2 h5 mt-2">Thursday</p>
+                            <p class="w-75 ml-auto mr-auto mt-auto mb-auto">{{menu.thursday.name}}</p>
+                            <a href="/home/recipe_{{menu.thursday.id}}" class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
+                        </div>
+                        <div class="day rounded shadow-sm d-flex flex-column">
+                            <p class="font-weight-bold pt-2 h5 mt-2">Friday</p>
+                            <p class="w-75 ml-auto mr-auto mt-auto mb-auto">{{menu.friday.name}}</p>
+                            <a href="/home/recipe_{{menu.friday.id}}" class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
+                        </div>
+                    </div>
+                    <div class="day-row d-flex justify-content-around p-1">
+                        <div class="day rounded shadow-sm d-flex flex-column">
+                            <p class="font-weight-bold pt-2 h5 mt-2">Saturday</p>
+                            <p class="w-75 ml-auto mr-auto mt-auto mb-auto">{{menu.saturday.name}}</p>
+                            <a href="/home/recipe_{{menu.saturday.id}}" class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
+                        </div>
+                        
+                    </div>
+                </div>
+                {% endif %}
+        {% endfor %}
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"
