--- a/foodie_app/templates/previous_menus.html
+++ b/foodie_app/templates/previous_menus.html
@@ -27,10 +27,11 @@
     </header>
     <button id="topBtn" title="Go to top" class="btn rounded shadow">Top</button>
     <div class="pt-5"></div>
-    <div>
+    <div class=" w-75 ml-auto mr-auto mt-5 d-flex flex-wrap">
         {% for menu in menus %}
             {% if menu.editor.id == user.id %}
-                <div class="menu w-100 m-3 d-flex flex-column p-1 rounded shadow-sm">
+                <div class="menu w-75 ml-auto mr-auto m-3 d-flex flex-column p-1 pb-2 rounded shadow-sm">
+                    <h3 class="text-center p-2 home">Week of </h3>
                     <div class="day-row d-flex justify-content-around p-1">
                         <div class="day rounded shadow-sm d-flex flex-column">
                             <p class="font-weight-bold pt-2 h5 mt-2">Sunday</p>
