--- a/foodie_app/templates/edit_recipe.html
+++ b/foodie_app/templates/edit_recipe.html
@@ -21,11 +21,11 @@
         <a href="/home/new_recipe" class="ml-auto btn-outline-secondary btn-lg p-1 pl-2 pr-2 rounded shadow-sm"
             data-toggle="tooltip" data-placement="bottom" title="New Recipe"><i class="fas fa-plus"></i></a></i>
         <a href="/home/{{user.id}}/inbox" class="ml-2 btn-outline-secondary btn-lg p-1 pl-2 pr-2 rounded shadow-sm"
-        data-toggle="tooltip" data-placement="bottom" title="Inbox"><i class="far fa-envelope"></i></a>
+            data-toggle="tooltip" data-placement="bottom" title="Inbox"><i class="far fa-envelope"></i></a>
         <a href="/home/{{user.id}}" class="ml-2 btn-outline-secondary btn-lg p-1 pl-2 pr-2 rounded shadow-sm"
             data-toggle="tooltip" data-placement="bottom" title="Profile"><i class="far fa-user-circle"></i></a>
-        <a href="/home/log_off" class="ml-2 btn-outline-secondary btn-lg p-1 pl-2 pr-2 rounded shadow-sm" data-toggle="tooltip"
-            data-placement="bottom" title="Log Out"><i class="fas fa-sign-out-alt"></i></a>
+        <a href="/home/log_off" class="ml-2 btn-outline-secondary btn-lg p-1 pl-2 pr-2 rounded shadow-sm"
+            data-toggle="tooltip" data-placement="bottom" title="Log Out"><i class="fas fa-sign-out-alt"></i></a>
     </header>
     <div class="pt-5"></div>
     <div class="w-50 shadow-sm mt-5 p-4 ml-auto mr-auto rounded recipe-card">
@@ -48,17 +48,20 @@
             <div class="form-group">
                 <label class="label h5" for="steps">Steps:</label>
                 <br>
-                <textarea name="steps" id="steps" cols="30" rows="5" class="form-control w-50">{{recipe.steps}}</textarea>
+                <textarea name="steps" id="steps" cols="30" rows="5"
+                    class="form-control w-50">{{recipe.steps}}</textarea>
             </div>
             <div class="form-group">
                 <label class="label h5" for="source">Recipe From:</label>
                 <br>
-                <textarea name="source" id="source" cols="45" rows="1" class="form-control w-50">{{recipe.source}}</textarea>
+                <textarea name="source" id="source" cols="45" rows="1"
+                    class="form-control w-50">{{recipe.source}}</textarea>
             </div>
             <input type="hidden" name="recipe_id" value="{{ recipe.id }}">
             <input class="btn mt-3 edit-recipe rounded shadow-sm" type="submit" name="submit" id="submit"
                 value="Update Recipe">
-            <a href="/home/{{recipe.id}}/delete_recipe" class="btn btn-danger p-2 mt-3"><i class="far fa-trash-alt"></i> Delete</a>
+            <a href="/home/{{recipe.id}}/delete_recipe" class="btn btn-danger p-2 mt-3"><i class="far fa-trash-alt"></i>
+                Delete</a>
         </form>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
