--- a/foodie_app/templates/inbox.html
+++ b/foodie_app/templates/inbox.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Inbox</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-            integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
-        {% load static %}
-        <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    </head>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Inbox</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+</head>
+
 <body>
     <header id="header" class="bg-white d-flex p-3 align-items-center shadow-sm mt-0">
         <h2 class="pr-5 mb-0"><a href="/home" class="home">Foodie Favs</a></h2>
@@ -20,12 +22,13 @@
             data-toggle="tooltip" data-placement="bottom" title="New Recipe"><i class="fas fa-plus"></i></a></i>
         <a href="/home/{{user.id}}" class="ml-2 btn-outline-secondary btn-lg p-1 pl-2 pr-2 rounded shadow-sm"
             data-toggle="tooltip" data-placement="bottom" title="Profile"><i class="far fa-user-circle"></i></a>
-        <a href="/home/log_off" class="ml-2 btn-outline-secondary btn-lg p-1 pl-2 pr-2 rounded shadow-sm" data-toggle="tooltip"
-            data-placement="bottom" title="Log Out"><i class="fas fa-sign-out-alt"></i></a>
+        <a href="/home/log_off" class="ml-2 btn-outline-secondary btn-lg p-1 pl-2 pr-2 rounded shadow-sm"
+            data-toggle="tooltip" data-placement="bottom" title="Log Out"><i class="fas fa-sign-out-alt"></i></a>
     </header>
     <div class="mt-5 pt-5 w-75 ml-auto mr-auto">
         <button id="topBtn" title="Go to top" class="btn rounded shadow-sm">Top</button>
-        <a href="/home/{{user.id}}/new_message" class="btn rounded shadow-sm button"><i class="far fa-edit"></i> Compose</a>
+        <a href="/home/{{user.id}}/new_message" class="btn rounded shadow-sm button"><i class="far fa-edit"></i>
+            Compose</a>
         <div class="d-flex">
             <div class="w-50 ml-auto mr-auto pl-3 pr-3">
                 <h3 class="text-center">Inbox</h3>
@@ -40,7 +43,8 @@
                     <tr>
                         <td>{{ message.sender.first_name }} {{ message.sender.last_name }}</td>
                         <td><a href="/home/{{user.id}}/inbox/{{message.id}}">{{ message.subject }}</a></td>
-                        <td>{{ message.created_at }} <a href="/home/{{user.id}}/{{message.id}}/delete_message"><i class="btn fas fa-trash"></i></a></td>
+                        <td>{{ message.created_at }} <a href="/home/{{user.id}}/{{message.id}}/delete_message"><i
+                                    class="btn fas fa-trash"></i></a></td>
                     </tr>
                     {% endif %}
                     {% endfor %}
@@ -59,22 +63,24 @@
                     <tr>
                         <td>{{ message.recipient.first_name }} {{ message.recipient.last_name }}</td>
                         <td><a href="/home/{{user.id}}/inbox/{{message.id}}">{{ message.subject }}</a></td>
-                        <td>{{ message.created_at }} <a href="/home/{{user.id}}/{{message.id}}/delete_message"><i class="btn fas fa-trash"></i></a></td>
+                        <td>{{ message.created_at }} <a href="/home/{{user.id}}/{{message.id}}/delete_message"><i
+                                    class="btn fas fa-trash"></i></a></td>
                     </tr>
                     {% endif %}
                     {% endfor %}
                 </table>
             </div>
         </div>
-          
+
     </div>
-    
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"
         integrity="sha384-LtrjvnR4Twt/qOuYxE721u19sVFLVSA4hf/rRt6PrZTmiPltdZcI7q7PXQBYTKyf"
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/181ad7b227.js" crossorigin="anonymous"></script>
     <script src="{% static 'js/app.js' %}"></script>
-    
+
 </body>
+
 </html>
