--- a/foodie_app/templates/previous_menus.html
+++ b/foodie_app/templates/previous_menus.html
@@ -1,82 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Previous Menus</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-            integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
-        {% load static %}
-        <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    </head>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Previous Menus</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+</head>
+
 <body>
     <header id="header" class="bg-white d-flex p-3 align-items-center shadow-sm mt-0">
         <h2 class="pr-5 mb-0"><a href="/home" class="home">Foodie Favs</a></h2>
         <a href="/home/new_recipe" class="ml-auto btn-outline-secondary btn-lg p-1 pl-2 pr-2 rounded shadow-sm"
             data-toggle="tooltip" data-placement="bottom" title="New Recipe"><i class="fas fa-plus"></i></a></i>
         <a href="/home/{{user.id}}/inbox" class="ml-2 btn-outline-secondary btn-lg p-1 pl-2 pr-2 rounded shadow-sm"
-        data-toggle="tooltip" data-placement="bottom" title="Inbox"><i class="far fa-envelope"></i></a>
+            data-toggle="tooltip" data-placement="bottom" title="Inbox"><i class="far fa-envelope"></i></a>
         <a href="/home/{{user.id}}" class="ml-2 btn-outline-secondary btn-lg p-1 pl-2 pr-2 rounded shadow-sm"
             data-toggle="tooltip" data-placement="bottom" title="Profile"><i class="far fa-user-circle"></i></a>
-        <a href="/home/log_off" class="ml-2 btn-outline-secondary btn-lg p-1 pl-2 pr-2 rounded shadow-sm" data-toggle="tooltip"
-            data-placement="bottom" title="Log Out"><i class="fas fa-sign-out-alt"></i></a>
+        <a href="/home/log_off" class="ml-2 btn-outline-secondary btn-lg p-1 pl-2 pr-2 rounded shadow-sm"
+            data-toggle="tooltip" data-placement="bottom" title="Log Out"><i class="fas fa-sign-out-alt"></i></a>
     </header>
     <button id="topBtn" title="Go to top" class="btn rounded shadow">Top</button>
     <div class="pt-5"></div>
     <div class=" w-75 ml-auto mr-auto mt-5 d-flex flex-wrap">
         {% for menu in menus %}
-            {% if menu.editor.id == user.id %}
-                <div class="menu w-75 ml-auto mr-auto m-3 d-flex flex-column p-1 pb-2 rounded shadow-sm">
-                    <h3 class="text-center p-2 home">Week of {{menu.week_start}}</h3>
-                    <div class="day-row d-flex justify-content-around p-1">
-                        <div class="day rounded shadow-sm d-flex flex-column">
-                            <p class="font-weight-bold pt-2 h5 mt-2">Sunday</p>
-                            <p class="w-75 ml-auto mr-auto mt-auto mb-auto">{{menu.sunday.name}}</p>
-                            <a href="/home/recipe_{{menu.sunday.id}}" class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
-                        </div>
-                        <div class="day rounded shadow-sm d-flex flex-column">
-                            <p class="font-weight-bold pt-2 h5 mt-2">Monday</p>
-                            <p class="w-75 ml-auto mr-auto mt-auto mb-auto">{{menu.monday.name}}</p>
-                            <a href="/home/recipe_{{menu.monday.id}}" class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
-                        </div>
-                        <div class="day rounded shadow-sm d-flex flex-column">
-                            <p class="font-weight-bold pt-2 h5 mt-2">Tuesday</p>
-                            <p class="w-75 ml-auto mr-auto mt-auto mb-auto">{{menu.monday.name}}</p>
-                            <a href="/home/recipe_{{menu.monday.id}}" class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
-                        </div>
-                    </div>
-
-                    <div class="day-row d-flex justify-content-around p-1">
-                        <div class="day rounded shadow-sm d-flex flex-column">
-                            <p class="font-weight-bold pt-2 h5 mt-2">Wednesday</p>
-                            <p class="w-75 ml-auto mr-auto mt-auto mb-auto">{{menu.wednesday.name}}</p>
-                            <a href="/home/recipe_{{menu.wednesday.id}}" class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
-                        </div>
-                        <div class="day rounded shadow-sm d-flex flex-column">
-                            <p class="font-weight-bold pt-2 h5 mt-2">Thursday</p>
-                            <p class="w-75 ml-auto mr-auto mt-auto mb-auto">{{menu.thursday.name}}</p>
-                            <a href="/home/recipe_{{menu.thursday.id}}" class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
-                        </div>
-                        <div class="day rounded shadow-sm d-flex flex-column">
-                            <p class="font-weight-bold pt-2 h5 mt-2">Friday</p>
-                            <p class="w-75 ml-auto mr-auto mt-auto mb-auto">{{menu.friday.name}}</p>
-                            <a href="/home/recipe_{{menu.friday.id}}" class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
-                        </div>
-                    </div>
-                    <div class="day-row d-flex justify-content-around p-1">
-                        <div class="day rounded shadow-sm d-flex flex-column">
-                            <p class="font-weight-bold pt-2 h5 mt-2">Saturday</p>
-                            <p class="w-75 ml-auto mr-auto mt-auto mb-auto">{{menu.saturday.name}}</p>
-                            <a href="/home/recipe_{{menu.saturday.id}}" class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
-                        </div>
-                        
-                    </div>
+        {% if menu.editor.id == user.id %}
+        <div class="menu w-75 ml-auto mr-auto m-3 d-flex flex-column p-1 pb-2 rounded shadow-sm">
+            <h3 class="text-center p-2 home">Week of {{menu.week_start}}</h3>
+            <div class="day-row d-flex justify-content-around p-1">
+                <div class="day rounded shadow-sm d-flex flex-column">
+                    <p class="font-weight-bold pt-2 h5 mt-2">Sunday</p>
+                    <p class="w-75 ml-auto mr-auto mt-auto mb-auto">{{menu.sunday.name}}</p>
+                    <a href="/home/recipe_{{menu.sunday.id}}"
+                        class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
                 </div>
-                {% endif %}
+                <div class="day rounded shadow-sm d-flex flex-column">
+                    <p class="font-weight-bold pt-2 h5 mt-2">Monday</p>
+                    <p class="w-75 ml-auto mr-auto mt-auto mb-auto">{{menu.monday.name}}</p>
+                    <a href="/home/recipe_{{menu.monday.id}}"
+                        class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
+                </div>
+                <div class="day rounded shadow-sm d-flex flex-column">
+                    <p class="font-weight-bold pt-2 h5 mt-2">Tuesday</p>
+                    <p class="w-75 ml-auto mr-auto mt-auto mb-auto">{{menu.monday.name}}</p>
+                    <a href="/home/recipe_{{menu.monday.id}}"
+                        class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
+                </div>
+            </div>
+
+            <div class="day-row d-flex justify-content-around p-1">
+                <div class="day rounded shadow-sm d-flex flex-column">
+                    <p class="font-weight-bold pt-2 h5 mt-2">Wednesday</p>
+                    <p class="w-75 ml-auto mr-auto mt-auto mb-auto">{{menu.wednesday.name}}</p>
+                    <a href="/home/recipe_{{menu.wednesday.id}}"
+                        class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
+                </div>
+                <div class="day rounded shadow-sm d-flex flex-column">
+                    <p class="font-weight-bold pt-2 h5 mt-2">Thursday</p>
+                    <p class="w-75 ml-auto mr-auto mt-auto mb-auto">{{menu.thursday.name}}</p>
+                    <a href="/home/recipe_{{menu.thursday.id}}"
+                        class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
+                </div>
+                <div class="day rounded shadow-sm d-flex flex-column">
+                    <p class="font-weight-bold pt-2 h5 mt-2">Friday</p>
+                    <p class="w-75 ml-auto mr-auto mt-auto mb-auto">{{menu.friday.name}}</p>
+                    <a href="/home/recipe_{{menu.friday.id}}"
+                        class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
+                </div>
+            </div>
+            <div class="day-row d-flex justify-content-around p-1">
+                <div class="day rounded shadow-sm d-flex flex-column">
+                    <p class="font-weight-bold pt-2 h5 mt-2">Saturday</p>
+                    <p class="w-75 ml-auto mr-auto mt-auto mb-auto">{{menu.saturday.name}}</p>
+                    <a href="/home/recipe_{{menu.saturday.id}}"
+                        class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
+                </div>
+
+            </div>
+        </div>
+        {% endif %}
         {% endfor %}
     </div>
 
@@ -87,4 +96,5 @@
     <script src="https://kit.fontawesome.com/181ad7b227.js" crossorigin="anonymous"></script>
     <script src="{% static 'js/app.js' %}"></script>
 </body>
+
 </html>
