--- a/foodie_app/templates/recipe.html
+++ b/foodie_app/templates/recipe.html
@@ -21,11 +21,11 @@
         <a href="/home/new_recipe" class="ml-auto btn-outline-secondary btn-lg p-1 pl-2 pr-2 rounded shadow-sm"
             data-toggle="tooltip" data-placement="bottom" title="New Recipe"><i class="fas fa-plus"></i></a></i>
         <a href="/home/{{user.id}}/inbox" class="ml-2 btn-outline-secondary btn-lg p-1 pl-2 pr-2 rounded shadow-sm"
-        data-toggle="tooltip" data-placement="bottom" title="Inbox"><i class="far fa-envelope"></i></a>
+            data-toggle="tooltip" data-placement="bottom" title="Inbox"><i class="far fa-envelope"></i></a>
         <a href="/home/{{user.id}}" class="ml-2 btn-outline-secondary btn-lg p-1 pl-2 pr-2 rounded shadow-sm"
             data-toggle="tooltip" data-placement="bottom" title="Profile"><i class="far fa-user-circle"></i></a>
-        <a href="/home/log_off" class="ml-2 btn-outline-secondary btn-lg p-1 pl-2 pr-2 rounded shadow-sm" data-toggle="tooltip"
-            data-placement="bottom" title="Log Out"><i class="fas fa-sign-out-alt"></i></a>
+        <a href="/home/log_off" class="ml-2 btn-outline-secondary btn-lg p-1 pl-2 pr-2 rounded shadow-sm"
+            data-toggle="tooltip" data-placement="bottom" title="Log Out"><i class="fas fa-sign-out-alt"></i></a>
     </header>
     <button id="topBtn" title="Go to top" class="btn rounded shadow">Top</button>
     <div class="pt-5"></div>
@@ -41,14 +41,17 @@
             <a href="{{recipe.source}}">{{recipe.source}}</a>
             <div class="d-flex mt-2">
                 {% if recipe.creator.id == user.id %}
-                <a href="/home/{{recipe.id}}/delete_recipe" class="btn btn-danger p-1 mr-2"><i class="far fa-trash-alt"></i> Delete</a>
-                <a href="/home/{{recipe.id}}/edit_recipe" class="btn btn-secondary p-1 mr-2"><i class="far fa-edit"></i> Edit</a>
+                <a href="/home/{{recipe.id}}/delete_recipe" class="btn btn-danger p-1 mr-2"><i
+                        class="far fa-trash-alt"></i> Delete</a>
+                <a href="/home/{{recipe.id}}/edit_recipe" class="btn btn-secondary p-1 mr-2"><i class="far fa-edit"></i>
+                    Edit</a>
                 {% endif %}
                 {% if user in recipe.users_who_favorite.all %}
                 <a href="/home/{{recipe.id}}/remove_favorite" class="btn favorite p-1 mr-2"></i> Remove Favorites</a>
                 {% endif %}
                 {% if not user in recipe.users_who_favorite.all %}
-                <a href="/home/{{recipe.id}}/add_favorite" class="btn favorite p-1 mr-2"><i class="far fa-heart"></i> Add Favorite</a>
+                <a href="/home/{{recipe.id}}/add_favorite" class="btn favorite p-1 mr-2"><i class="far fa-heart"></i>
+                    Add Favorite</a>
                 {% endif %}
             </div>
 
