--- a/foodie_app/templates/user_profile.html
+++ b/foodie_app/templates/user_profile.html
@@ -21,11 +21,11 @@
         <a href="/home/new_recipe" class="ml-auto btn-outline-secondary btn-lg p-1 pl-2 pr-2 rounded shadow-sm"
             data-toggle="tooltip" data-placement="bottom" title="New Recipe"><i class="fas fa-plus"></i></a></i>
         <a href="/home/{{user.id}}/inbox" class="ml-2 btn-outline-secondary btn-lg p-1 pl-2 pr-2 rounded shadow-sm"
-        data-toggle="tooltip" data-placement="bottom" title="Inbox"><i class="far fa-envelope"></i></a>
+            data-toggle="tooltip" data-placement="bottom" title="Inbox"><i class="far fa-envelope"></i></a>
         <a href="/home/{{user.id}}/settings" class="ml-2 btn-outline-secondary btn-lg p-1 pl-2 pr-2 rounded shadow-sm"
             data-toggle="tooltip" data-placement="bottom" title="Profile Settings"><i class="fas fa-cog"></i></a>
-        <a href="/home/log_off" class="ml-2 btn-outline-secondary btn-lg p-1 pl-2 pr-2 rounded shadow-sm" data-toggle="tooltip"
-            data-placement="bottom" title="Log Out"><i class="fas fa-sign-out-alt"></i></a>
+        <a href="/home/log_off" class="ml-2 btn-outline-secondary btn-lg p-1 pl-2 pr-2 rounded shadow-sm"
+            data-toggle="tooltip" data-placement="bottom" title="Log Out"><i class="fas fa-sign-out-alt"></i></a>
     </header>
     <button id="topBtn" title="Go to top" class="btn rounded shadow">Top</button>
     <div class="pt-5"></div>
@@ -39,17 +39,20 @@
                     <div class="day rounded shadow-sm d-flex flex-column">
                         <p class="font-weight-bold pt-2 h5 mt-2">Sunday</p>
                         <p class="w-75 ml-auto mr-auto mt-auto mb-auto">{{menu.sunday.name}}</p>
-                        <a href="/home/recipe_{{menu.sunday.id}}" class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
+                        <a href="/home/recipe_{{menu.sunday.id}}"
+                            class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
                     </div>
                     <div class="day rounded shadow-sm d-flex flex-column">
                         <p class="font-weight-bold pt-2 h5 mt-2">Monday</p>
                         <p class="w-75 ml-auto mr-auto mt-auto mb-auto">{{menu.monday.name}}</p>
-                        <a href="/home/recipe_{{menu.monday.id}}" class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
+                        <a href="/home/recipe_{{menu.monday.id}}"
+                            class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
                     </div>
                     <div class="day rounded shadow-sm d-flex flex-column">
                         <p class="font-weight-bold pt-2 h5 mt-2">Tuesday</p>
                         <p class="w-75 ml-auto mr-auto mt-auto mb-auto">{{menu.monday.name}}</p>
-                        <a href="/home/recipe_{{menu.monday.id}}" class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
+                        <a href="/home/recipe_{{menu.monday.id}}"
+                            class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
                     </div>
                 </div>
 
@@ -57,37 +60,43 @@
                     <div class="day rounded shadow-sm d-flex flex-column">
                         <p class="font-weight-bold pt-2 h5 mt-2">Wednesday</p>
                         <p class="w-75 ml-auto mr-auto mt-auto mb-auto">{{menu.wednesday.name}}</p>
-                        <a href="/home/recipe_{{menu.wednesday.id}}" class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
+                        <a href="/home/recipe_{{menu.wednesday.id}}"
+                            class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
                     </div>
                     <div class="day rounded shadow-sm d-flex flex-column">
                         <p class="font-weight-bold pt-2 h5 mt-2">Thursday</p>
                         <p class="w-75 ml-auto mr-auto mt-auto mb-auto">{{menu.thursday.name}}</p>
-                        <a href="/home/recipe_{{menu.thursday.id}}" class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
+                        <a href="/home/recipe_{{menu.thursday.id}}"
+                            class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
                     </div>
                     <div class="day rounded shadow-sm d-flex flex-column">
                         <p class="font-weight-bold pt-2 h5 mt-2">Friday</p>
                         <p class="w-75 ml-auto mr-auto mt-auto mb-auto">{{menu.friday.name}}</p>
-                        <a href="/home/recipe_{{menu.friday.id}}" class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
+                        <a href="/home/recipe_{{menu.friday.id}}"
+                            class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
                     </div>
                 </div>
                 <div class="day-row d-flex justify-content-end p-1">
                     <div class="day rounded shadow-sm d-flex flex-column">
                         <p class="font-weight-bold pt-2 h5 mt-2">Saturday</p>
                         <p class="w-75 ml-auto mr-auto mt-auto mb-auto">{{menu.saturday.name}}</p>
-                        <a href="/home/recipe_{{menu.saturday.id}}" class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
+                        <a href="/home/recipe_{{menu.saturday.id}}"
+                            class="btn view-recipe ml-auto mr-auto mt-auto mb-2">View</a>
                     </div>
                     {%if menu.editor.id == user.id %}
                     <div class="edit d-flex">
-                        <a class="btn btn-lg mt-auto ml-auto pr-2" href="/home/edit_menu{{menu.id}}"><i class="far fa-edit"></i></a>
+                        <a class="btn btn-lg mt-auto ml-auto pr-2" href="/home/edit_menu{{menu.id}}"><i
+                                class="far fa-edit"></i></a>
                         <a href="/home/menu" class="btn btn-lg mt-auto pl-1"><i class="fas fa-plus"></i></a></i>
                     </div>
                     {% else %}
                     <a class="btn view-recipe" href="/home/menu">create Menu</a>
                     {% endif %}
-                    
+
                 </div>
             </div>
-            <a href="/home/{{user.id}}/previous_menus" class="btn btn-lg submit rounded shadow-sm ml-3">Previous Menus</a>
+            <a href="/home/{{user.id}}/previous_menus" class="btn btn-lg submit rounded shadow-sm ml-3">Previous
+                Menus</a>
         </div>
         <div class="w-25 d-flex flex-column align-items-center">
             <h2 class="heading ">Favorite Recipes</h2>
@@ -123,7 +132,8 @@
                         {% if item.user.id == user.id %}
                         <div class="d-flex alin-items-start mb-2">
                             <li class="pt-2">{{item.item}}</li>
-                            <a href="/home/{{user.id}}/delete_item/{{item.id}}"><i class="btn mt-1 fas fa-trash"></i></a>
+                            <a href="/home/{{user.id}}/delete_item/{{item.id}}"><i
+                                    class="btn mt-1 fas fa-trash"></i></a>
                         </div>
                         {% endif %}
                         {% endfor %}
